Extract Logger to conia/log package

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ theme:
     name: conia
 repo_url: https://github.com/coniadev/error
 extra:
-    project: Http
+    project: Error
 plugins:
     - search
     - macros:
