--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs-conia
+      - run: pip install mkdocs-fiveorbs
       - run: mkdocs gh-deploy --force
 
